@@ -1,3 +1,12 @@
+2009-06-01  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR gas/10198
+	* gas/i386/jump.s: Add test for "jmp $+2".
+	* gas/i386/jump16.s: Likewise.
+
+	* gas/i386/jump.d: Updated.
+	* gas/i386/jump16.d: Likewise.
+
 2009-05-26  Catherine Moore  <clm@codesourcery.com>
 
 	* gas/mips/eret.s: Remove.
